# mysql-router-operator

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  constraints.txt  index.html  instructions.md  metadata.yaml  pyproject.toml  refresh_versions.toml  requirements.txt  spread.yaml  tox.ini
.github/: .jira_sync_config.yaml  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check_libs.yaml  ci.yaml  integration_test.yaml  juju_3_6_ci.yaml  promote.yaml  release.yaml  static_code_analysis.yaml  sync_docs.yaml  sync_issue_to_jira.yaml  tiobe_scan.yaml
1661/: index.html
1661/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1661/export/: influxDbData.txt  prometheusData.txt
1661/history/: categories-trend.json  history-trend.json  history.json
1661/widgets/: duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
1674/: index.html
1674/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1674/export/: influxDbData.txt  prometheusData.txt
1674/history/: duration-trend.json  history.json  retry-trend.json
1674/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
1680/: index.html
1680/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1680/export/: influxDbData.txt  prometheusData.txt
1680/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
1680/widgets/: duration.json  executors.json  history-trend.json  severity.json  summary.json
1685/: index.html
1685/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1685/export/: influxDbData.txt  prometheusData.txt
1685/history/: categories-trend.json  history.json
1685/widgets/: duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
1686/: index.html
1686/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1686/export/: influxDbData.txt  prometheusData.txt
1686/history/: history.json  retry-trend.json
1686/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
1687/: index.html
1687/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1687/export/: influxDbData.txt  prometheusData.txt
1687/history/: categories-trend.json  history-trend.json  history.json
1687/widgets/: duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
1694/: index.html
1694/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1694/export/: influxDbData.txt  prometheusData.txt
1694/history/: history.json  retry-trend.json
1694/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
1701/: index.html
1701/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1701/export/: influxDbData.txt  prometheusData.txt
1701/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
1701/widgets/: executors.json  history-trend.json  severity.json  status-chart.json  summary.json
1702/: index.html
1702/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1702/export/: influxDbData.txt  (+1 more)
1705/: index.html
1708/: index.html
1709/: index.html
1710/: index.html
1714/: index.html
1715/: index.html
1722/: index.html
1726/: index.html
1727/: index.html
1728/: index.html
1733/: index.html
1744/: index.html
1745/: index.html
1747/: index.html
1748/: index.html
1749/: index.html
1750/: index.html
1755/: index.html
1758/: index.html
1760/: index.html
1761/: index.html
1762/: index.html
1767/: index.html
1768/: index.html
1769/: index.html
1771/: index.html
1772/: index.html
1773/: index.html
1774/: index.html
1778/: index.html
1780/: index.html
1781/: index.html
1783/: index.html
1784/: index.html
1785/: index.html
1787/: index.html
1790/: index.html
1804/: index.html
1834/: index.html
1885/: index.html
1886/: index.html
1887/: index.html
1912/: index.html
1948/: index.html
1949/: index.html
1970/: index.html
1999/: index.html
2001/: index.html
2002/: index.html
2016/: index.html
2017/: index.html
2027/: index.html
2028/: index.html
2029/: index.html
2030/: index.html
2031/: index.html
2043/: index.html
2045/: index.html
2066/: index.html
2067/: index.html
2068/: index.html
2069/: index.html
2162/: index.html
2167/: index.html
2168/: index.html
2170/: index.html
2171/: index.html
2175/: index.html
2176/: index.html
2177/: index.html
2178/: index.html
2179/: index.html
2180/: index.html
2181/: index.html
2185/: index.html
2186/: index.html
2189/: index.html
2194/: index.html
2195/: index.html
2196/: index.html
2198/: index.html
2209/: index.html
2213/: index.html
2214/: index.html
2215/: index.html
2216/: index.html
2217/: index.html
2218/: index.html
2223/: index.html
2224/: index.html
2225/: index.html
2226/: index.html
2227/: index.html
2228/: index.html
2230/: index.html
2233/: index.html
2234/: index.html
2235/: index.html
2236/: index.html
2237/: index.html
2238/: index.html
docs/: index.md  overview.md
src/: abstract_charm.py  architecture.py  charm.py  constants.py  container.py  lifecycle.py  logrotate.py  machine_charm.py  machine_hostname_mapping.py  machine_logrotate.py  machine_upgrade.py  machine_workload.py  mysql_router_helpers.py  mysql_shell.py  server_exceptions.py  snap.py  socket_workload.py  status_exception.py  upgrade.py  utils.py  workload.py
templates/: logrotate.j2  mysqlrouter.service.j2  tls.cnf
tests/: conftest.py
(+8353 files in other folders)
